overflow fixed 2

--- a/src/style.css
+++ b/src/style.css
@@ -544,8 +544,12 @@ video {
   position: fixed;
 }
 
-.sticky {
-  position: sticky;
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .top-0 {
@@ -554,14 +558,6 @@ video {
 
 .top-24 {
   top: 6rem;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .z-50 {
@@ -632,12 +628,8 @@ video {
   height: 6rem;
 }
 
-.h-\[390px\] {
-  height: 390px;
-}
-
-.h-\[400px\] {
-  height: 400px;
+.h-80 {
+  height: 20rem;
 }
 
 .h-auto {
@@ -652,20 +644,16 @@ video {
   width: 0px;
 }
 
-.w-\[300px\] {
-  width: 300px;
+.w-72 {
+  width: 18rem;
 }
 
-.w-\[320px\] {
-  width: 320px;
+.w-80 {
+  width: 20rem;
 }
 
-.w-\[390px\] {
-  width: 390px;
-}
-
-.w-\[400px\] {
-  width: 400px;
+.w-full {
+  width: 100%;
 }
 
 .w-screen {
@@ -698,10 +686,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.overflow-x-hidden {
-  overflow-x: hidden;
 }
 
 .rounded-2xl {
@@ -758,9 +742,19 @@ video {
   padding-right: 0.75rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .py-28 {
@@ -771,11 +765,6 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .pt-4 {
@@ -790,6 +779,10 @@ video {
   font-family: Montserrat;
 }
 
+.font-josefin {
+  font-family: Josefin Sans, sans-serif;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -798,6 +791,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-semibold {
@@ -843,81 +841,7 @@ video {
   transition-property: none;
 }
 
-.\[zoom\:1\.1\] {
-  zoom: 1.1;
-}
-
-.\[zoom\:3\] {
-  zoom: 3;
-}
-
-.\[zoom\:1\] {
-  zoom: 1;
-}
-
-.\[zoom\:2\] {
-  zoom: 2;
-}
-
-.\[zoom\:2\.2\] {
-  zoom: 2.2;
-}
-
-.\[zoom\:1\2c 5\] {
-  zoom: 1,5;
-}
-
-.\[zoom\:1\.7\] {
-  zoom: 1.7;
-}
-
-.\[zoom\:1\.8\] {
-  zoom: 1.8;
-}
-
-.\[zoom\:1\.5\] {
-  zoom: 1.5;
-}
-
-.\[zoom\:1\.6\] {
-  zoom: 1.6;
-}
-
-.\[zoom\:1\.3\] {
-  zoom: 1.3;
-}
-
-.\[zoom\:1\.2\] {
-  zoom: 1.2;
-}
-
-.\[zoom\:0\.5\] {
-  zoom: 0.5;
-}
-
-.\[zoom\:0\.7\] {
-  zoom: 0.7;
-}
-
-.\[zoom\:0\.6\] {
-  zoom: 0.6;
-}
-
-.\[zoom\:0\.2\] {
-  zoom: 0.2;
-}
-
-.\[zoom\:0\.\] {
-  zoom: 0.;
-}
-
-.\[zoom\:0\.9\] {
-  zoom: 0.9;
-}
-
 * {
-  margin: 0px;
-  padding: 0px;
   font-family: Montserrat;
 }
 
@@ -1076,11 +1000,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:my-48 {
-    margin-top: 12rem;
-    margin-bottom: 12rem;
-  }
-
   .md\:ml-24 {
     margin-left: 6rem;
   }
@@ -1095,62 +1014,6 @@ body {
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:scale-105 {
-    --tw-scale-x: 1.05;
-    --tw-scale-y: 1.05;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:py-32 {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-  }
-
-  .md\:py-36 {
-    padding-top: 9rem;
-    padding-bottom: 9rem;
-  }
-
-  .md\:py-40 {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-  }
-
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .md\:py-48 {
-    padding-top: 12rem;
-    padding-bottom: 12rem;
-  }
-
-  .md\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-
-  .md\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .md\:py-7 {
-    padding-top: 1.75rem;
-    padding-bottom: 1.75rem;
-  }
-
-  .md\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .md\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
   }
 
   .md\:text-2xl {
@@ -1208,6 +1071,10 @@ body {
     flex-direction: row;
   }
 
+  .lg\:justify-start {
+    justify-content: flex-start;
+  }
+
   .lg\:p-0 {
     padding: 0px;
   }
@@ -1215,16 +1082,6 @@ body {
   .lg\:py-36 {
     padding-top: 9rem;
     padding-bottom: 9rem;
-  }
-
-  .lg\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .lg\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
   }
 
   .lg\:text-3xl {
@@ -1235,22 +1092,6 @@ body {
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .lg\:\[zoom\:1\.5\] {
-    zoom: 1.5;
-  }
-
-  .lg\:\[zoom\:4\] {
-    zoom: 4;
-  }
-
-  .lg\:\[zoom\:3\] {
-    zoom: 3;
-  }
-
-  .lg\:\[zoom\:1\] {
-    zoom: 1;
   }
 }
 
@@ -1267,37 +1108,9 @@ body {
     margin-right: 4rem;
   }
 
-  .xl\:scale-110 {
-    --tw-scale-x: 1.1;
-    --tw-scale-y: 1.1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .xl\:scale-125 {
-    --tw-scale-x: 1.25;
-    --tw-scale-y: 1.25;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .xl\:\[zoom\:1\.\] {
-    zoom: 1.;
-  }
-
-  .xl\:\[zoom\:1\.3\] {
-    zoom: 1.3;
-  }
-
-  .xl\:\[zoom\:1\.4\] {
-    zoom: 1.4;
-  }
-
-  .xl\:\[zoom\:1\.5\] {
-    zoom: 1.5;
   }
 
   .xl\:\[zoom\:1\.2\] {
