--- a/tailwind.css
+++ b/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  @apply font-montserrat p-0 m-0 ;
+  @apply font-montserrat  ;
 }
 
 body.dark {
@@ -11,7 +11,7 @@ body.dark {
 }
 
 body{
-  @apply overflow-x-hidden md:overflow-x-hidden sm:overflow-x-hidden lg:overflow-x-hidden left-0 right-0 bottom-0;
+  @apply overflow-x-hidden md:overflow-x-hidden sm:overflow-x-hidden lg:overflow-x-hidden ;
 }
 
 .nav-link {
